# scSAGA

scSAGA/: README.md  environment.yml  pyproject.toml
scSAGA/config/: input_fusion.yml
scSAGA/scmint/: scsaga.py
