#
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "scmint"
version = "0.1"
description = " : "
authors = ["Swethasree Bhattaram <sbhattaram6@gatech.edu>"]
readme = "README.md"
homepage = "https://github.com/"
license = "Apache-2.0"
keywords = ["Data-driven", "Computational Biology", "Gene Regulatory Networks"]

[tool.poetry.dependencies]
python = "^3.13"
anndata = "^0.11"
devtools = "^0.12"
geosketch = "^1.3"
memory_profiler = "^0.61"
numpy = "^2.1"
pandas = "^2.2"
plotly = "^6.2"
pot = "^0.9"
pydantic = "^2.11"
scanpy = "^1.11"
scib = "^1.1"
scikit-learn = "^1.5"
scipy = "^1.15"
torch = "^2.7"
pyyaml = "^6.0"
#

[tool.setuptools.packages.find]
include = ["scmint"]

[tool.pyright]
include = ["scmint", "data"]
exclude = ["**/__pycache__"]

[tool.black]
line-length = 88
target-version = ["py310"]
